libstdc++-v3/testsuite/27_io/fpos/14320-5.cc
@@ -1,5 +1,6 @@
-// Copyright (C) 2003
-// Free Software Foundation, Inc.
+// 2004-03-02  Petur Runolfsson  <peturr02@ru.is>
+
+// Copyright (C) 2004 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -19,24 +20,26 @@
 
 // 27.4.3 fpos
 
-// { dg-do compile }
+#include <iterator>
+#include <sstream>
+#include <testsuite_hooks.h>
 
-#include <ios>
-
-void test04()
+// libstdc++/14320
+void test01()
 {
-  std::streampos pos;
-  long n;
+  using namespace std;
+  bool test __attribute__((unused)) = true;
 
-  // Implicit conversion
-  n = pos; // { dg-error "cannot convert" "" { xfail *-*-* } }
-
-  // Explicit conversion
-  n = static_cast<long>(pos); // { dg-error "invalid static_cast" "" { xfail *-*-* } }
+  typedef istreambuf_iterator<char>::difference_type Distance;
+	
+  Distance d;
+  istringstream in("5");
+  in >> d;
+  VERIFY( d == 5 );
 }
 
 int main()
 {
-  test04();
+  test01();
   return 0;
 }
